Bug 253999 - Pager: Last mouse hovered desktop flashes when mouse enters another one
Summary: Pager: Last mouse hovered desktop flashes when mouse enters another one
Status: RESOLVED FIXED
Alias: None
Product: plasma4
Classification: Unmaintained
Component: widget-pager (other bugs)
Version First Reported In: unspecified
Platform: Debian unstable Linux
: NOR minor
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-10-12 20:19 UTC by ultr
Modified: 2011-12-04 09:42 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Mini-screencast of the problem (28.84 KB, video/x-msvideo)
2011-05-14 03:10 UTC, Frank Steinmetzger
Details

Note You need to log in before you can comment on or make changes to this bug.
Description ultr 2010-10-12 20:19:31 UTC
Version:           unspecified (using KDE 4.5.1) 
OS:                Linux

Last mouse hovered desktop flashes for a very short time when the mouse enters another desktop's rectangle.

Reproducible: Always

Steps to Reproduce:
Remeber: do not hover any other desktops' rectangles when moving the mouse.
1) Move mouse over pager's 1st desktop's rectangle.
2) Move the mouse out of the pager.
3) Move the pointer over 3rd desktop's rectangle.
4) Notice the 1st desktop's rectangle flashes for a short time.

Actual Results:  
1st desktop rectangle flashes for a short time.

Expected Results:  
1st desktop rectangle should not flash, only the 3rd one.
Comment 1 Frank Steinmetzger 2011-05-14 03:10:37 UTC
Created attachment 59980 [details]
Mini-screencast of the problem

Actually, it does not only flash for a short time, it flashes _all_ the time, as long as you move the mouse cursor over the pager’s margins.
Comment 2 ultr 2011-05-14 10:54:57 UTC
@Frank Steinmetzger

I have noticed this too yesterday. Maybe it's a "feature" of new KDE version (4.6.2)? I haven't seen it before.

This bug seems to be a trivial mistake, and I can't believe it isn't fixed yet. KDE 4 has lots of such bugs reported, but no developer seems to care.
Comment 3 Aaron J. Seigo 2011-12-04 09:41:56 UTC
@ultr: "and I can't believe it isn't fixed yet. KDE 4 has lots of such bugs reported, but no developer seems to care."

that kind of feedback does not help *at all*. the developers are extremely busy improving things. they put in a lot of hard work and community support is a big part of what keeps the momentum going. the last thing needed are people complaining about how 1 bug report out of 1200, which in this case is a minor graphical issue not impacting actual usage, isn't addressed according to your personal time scale. it doesn't create a fix, but tends to demotivate and drive volunteer developers away. this results in longer, not shorter, improvement times and a generally less pleasant community to be a part of. please consider this in future.

c.f. http://kde.org/code-of-conduct/

thanks ..
Comment 4 Aaron J. Seigo 2011-12-04 09:42:09 UTC
Git commit 3d84023ceb10c14d9bda22d559cb3e03b7658edd by Aaron Seigo.
Committed on 04/12/2011 at 10:40.
Pushed by aseigo into branch 'master'.

on hover move, if there are no hover rects, then reset the hover id to -1

other half of the fix for 253999
BUG:253999

M  +2    -0    plasma/desktop/applets/pager/pager.cpp

http://commits.kde.org/kde-workspace/3d84023ceb10c14d9bda22d559cb3e03b7658edd
Comment 5 Aaron J. Seigo 2011-12-04 09:42:09 UTC
Git commit b67daaf833877a6f729b40a57d856e0a0d078f4d by Aaron Seigo.
Committed on 04/12/2011 at 10:38.
Pushed by aseigo into branch 'master'.

on hover-out, reset the highlight it.

half the fix for 253999
BUG:253999

M  +1    -0    plasma/desktop/applets/pager/pager.cpp

http://commits.kde.org/kde-workspace/b67daaf833877a6f729b40a57d856e0a0d078f4d