on hover-out, reset the highlight it.

half the fix for 253999
BUG:253999